# aof2021

./: Cargo.toml  README.md
src/day1/p1/: main.rs
src/day1/p2/: main.rs
src/day10/p1/: main.rs
src/day10/p2/: main.rs
src/day11/p1/: main.rs
src/day12/p1/: main.rs
src/day12/p2/: main.rs
src/day13/: main.rs
src/day14/: main.rs
src/day15/: main.rs
src/day16/: main.rs
src/day2/p1/: main.rs
src/day2/p2/: main.rs
src/day3/p1/: main.rs
src/day3/p2/: main.rs
src/day4/p1/: main.rs
src/day4/p2/: main.rs
src/day5/p1/: main.rs
src/day5/p2/: main.rs
src/day6/p1/: main.rs
src/day7/p1/: main.rs
src/day7/p2/: main.rs
src/day8/p1/: main.rs
src/day8/p2/: main.rs
src/day9/p1/: main.rs
src/day9/p2/: main.rs
