[package]
name = "aof2021"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "d1p1"
path = "src/day1/p1/main.rs"

[[bin]]
name = "d1p2"
path = "src/day1/p2/main.rs"

[[bin]]
name = "d2p1"
path = "src/day2/p1/main.rs"

[[bin]]
name = "d2p2"
path = "src/day2/p2/main.rs"

[[bin]]
name = "d3p1"
path = "src/day3/p1/main.rs"

[[bin]]
name = "d3p2"
path = "src/day3/p2/main.rs"

[[bin]]
name = "d4p1"
path = "src/day4/p1/main.rs"

[[bin]]
name = "d4p2"
path = "src/day4/p2/main.rs"