[package]
name = "aof2021"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "d1p1"
path = "src/day1/p1/main.rs"

[[bin]]
name = "d1p2"
path = "src/day1/p2/main.rs"

[[bin]]
name = "d2p1"
path = "src/day2/p1/main.rs"

[[bin]]
name = "d2p2"
path = "src/day2/p2/main.rs"

[[bin]]
name = "d3p1"
path = "src/day3/p1/main.rs"

[[bin]]
name = "d3p2"
path = "src/day3/p2/main.rs"

[[bin]]
name = "d4p1"
path = "src/day4/p1/main.rs"

[[bin]]
name = "d4p2"
path = "src/day4/p2/main.rs"

[[bin]]
name = "d5p1"
path = "src/day5/p1/main.rs"

[[bin]]
name = "d5p2"
path = "src/day5/p2/main.rs"

[[bin]]
name = "d6p1"
path = "src/day6/p1/main.rs"

[[bin]]
name = "d7p1"
path = "src/day7/p1/main.rs"

[[bin]]
name = "d7p2"
path = "src/day7/p2/main.rs"

[[bin]]
name = "d8p1"
path = "src/day8/p1/main.rs"

[[bin]]
name = "d8p2"
path = "src/day8/p2/main.rs"

[[bin]]
name = "d9p1"
path = "src/day9/p1/main.rs"

[[bin]]
name = "d9p2"
path = "src/day9/p2/main.rs"

[[bin]]
name = "d10p1"
path = "src/day10/p1/main.rs"

[[bin]]
name = "d10p2"
path = "src/day10/p2/main.rs"

[[bin]]
name = "d11p1"
path = "src/day11/p1/main.rs"

[[bin]]
name = "d12p1"
path = "src/day12/p1/main.rs"

[[bin]]
name = "d12p2"
path = "src/day12/p2/main.rs"

[[bin]]
name = "d13"
path = "src/day13/main.rs"